--- a/sections/product-shoppable-videos.liquid
+++ b/sections/product-shoppable-videos.liquid
@@ -172,6 +172,17 @@
     text-decoration: line-through;
     color: #00000070;
   }
+  @media (max-width: 850px) {
+    .product-title {
+      font-size: 1.5rem;
+    }
+    .product-prices {
+      font-size: 1.2rem;
+    }
+    .product-shoppable-videos .page-width {
+      gap: 10px;
+    }
+  }
   @media (max-width: 500px) {
     .product-shoppable-video-block {
       min-width: 220px;
