--- a/sections/product-banner-fold.liquid
+++ b/sections/product-banner-fold.liquid
@@ -14,6 +14,15 @@
     border-radius: 10px;
     width: 49%;
   }
+  @media (max-width: 850px) {
+    .product-banners-fold-container {
+      flex-direction: column;
+      gap: 10px;
+    }
+    .product-banners-fold-container img {
+      width: 100%;
+    }
+  }
 </style>
 {% schema %}
 {
