--- a/assets/base.css
+++ b/assets/base.css
@@ -2220,7 +2220,8 @@ input[type='checkbox'] {
   }
 
   .announcement-bar .slider-button {
-    height: 3.8rem;
+    /* height: 3.8rem; */
+    height: fit-content;
   }
 }
 
@@ -2247,11 +2248,10 @@ input[type='checkbox'] {
 
 .announcement-bar__message {
   text-align: center;
-  padding: 1rem 0;
+  padding: .4rem 0;
   margin: 0;
   letter-spacing: 0;
   font-family: 'Inter';
-  min-height: 3.8rem;
   font-weight: 500;
 }
 
