--- a/sections/sticky-add_to_cart.liquid
+++ b/sections/sticky-add_to_cart.liquid
@@ -16,7 +16,15 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 9;
+    z-index: 90;
+  }
+  .sticky-atc-container img {
+    width: 50px;
+    border-radius: 10px;
+  }
+  .price__container_parent {
+    display: flex;
+    gap: 5px;
   }
   .sticky-atc-container .page-width {
     display: flex;
@@ -32,7 +40,7 @@
   .sticky-atc-container .page-width .price--large {
     width: fit-content;
     display: flex;
-    flex-direction: column;
+    gap: 13px;
     justify-content: center;
     align-items: center;
   }
@@ -45,22 +53,27 @@
   .sticky-atc-container-buy-button {
     width: 45%;
   }
-  .sticky-atc-container .price-item--sale {
-    font-size: 2.5rem;
-    font-weight: 600;
+  .sticky-atc-container .price-item--sale,
+  .sticky-atc-container .page-width .price--large p {
+    font-size: 1.5rem;
+    font-weight: 500;
     font-family: 'Kanit', sans-serif;
     letter-spacing: 0;
     line-height: 2.5rem;
+    margin: 0;
   }
   .sticky-atc-container .price--on-sale .price-item--regular {
-    font-family: 'Kanit', sans-serif;
     font-size: 1.5rem;
-    font-weight: 300;
+    font-weight: 500;
+    font-family: 'Kanit', sans-serif;
     letter-spacing: 0;
+    line-height: 2.5rem;
+    margin: 0;
+    opacity: 0.7;
   }
   @media (max-width: 500px) {
     .sticky-atc-container .page-width {
-      padding: 15px 1.5rem;
+      padding: 10px;
     }
   }
 </style>
