--- a/sections/product-info-fold.liquid
+++ b/sections/product-info-fold.liquid
@@ -58,7 +58,71 @@
           </p>
         {% endcomment %}
         {% comment %} Product Variant {% endcomment %}
-        {% comment %} {% render 'product-variant-picker', product: product, product_form_id: product_form_id %} {% endcomment %}
+        {% comment %}
+          {%- unless product.has_only_default_variant -%}
+            <variant-selects
+              id="variant-selects-{{ section.id }}"
+              data-section="{{ section.id }}"
+            >
+              {%- for option in product.options_with_values -%}
+                {%- liquid
+                  assign swatch_count = option.values | map: 'swatch' | compact | size
+                  assign picker_type = 'button'
+                  if swatch_count > 0
+                    assign picker_type = 'swatch'
+                  endif
+                -%}
+                <fieldset class="js product-form__input product-form__input--pill">
+                  <legend class="form__label">{{ option.name }}</legend>
+                  {% render 'product-variant-options', product: product, option: option, picker_type: picker_type %}
+                </fieldset>
+              {%- endfor -%}
+
+              <script type="application/json" data-selected-variant>
+                {{ product.selected_or_first_available_variant | json }}
+              </script>
+            </variant-selects>
+          {%- endunless -%}
+        {% endcomment %}
+        {%- for block in section.blocks -%}
+          {%- case block.type -%}
+            {%- when 'variant_picker' -%}
+              {% render 'product-variant-picker', product: product, block: block, product_form_id: product_form_id %}
+          {%- endcase -%}
+        {%- endfor -%}
+        <script>
+          document.addEventListener('DOMContentLoaded', () => {
+            const variantDivs = document.querySelectorAll('.variant-div');
+
+            variantDivs.forEach((div) => {
+              const color = div.getAttribute('data-color');
+              if (color) {
+                // Set inline background color for unmatched colors
+                const formattedColor = color.toLowerCase().replace(/\s+/g, '-');
+                div.style.backgroundColor = formattedColor;
+
+                // Set a fallback if the color isn't recognized
+                div.style.backgroundColor = div.style.backgroundColor || '#ccc';
+              }
+
+              div.addEventListener('click', () => {
+                const inputId = div.getAttribute('data-input-id');
+                const radioInput = document.getElementById(inputId);
+
+                // Unselect other variants
+                document.querySelectorAll('.variant-div').forEach((item) => {
+                  item.classList.remove('selected');
+                });
+
+                // Select the clicked variant
+                if (radioInput) {
+                  radioInput.checked = true;
+                  div.classList.add('selected');
+                }
+              });
+            });
+          });
+        </script>
         <div class="product-info-fold-right-container mobile-usp-right-container">
           <div class="product-info-fold-right-parent">
             {% for usp in product.metafields.content.product_usp.value %}
@@ -155,10 +219,12 @@
           show_pickup_availability: true
         -%}
         <div class="product-info-fold-claims-container">
-          <img
-            class="product-info-fold-claims-discreet-image"
-            src="{{ product.metafields.content.banner_2 | image_url }}"
-          >
+          {% if product.metafields.content.banner_2 %}
+            <img
+              class="product-info-fold-claims-discreet-image"
+              src="{{ product.metafields.content.banner_2 | image_url }}"
+            >
+          {% endif %}
           <div>
             <img src="https://cdn.shopify.com/s/files/1/0767/6297/2470/files/pdp-discreet-shipping.png?v=1737969814">
             <p>Free discreet shipping</p>
@@ -210,9 +276,6 @@
   </div>
 </product-info>
 <style>
-  .product-info-fold-container variant-selects label {
-    display: none;
-  }
   .hotspot-backdrop {
     position: fixed;
     top: 0;
@@ -775,7 +838,52 @@
 {
   "name": "Product Info Fold",
   "settings": [],
-  "blocks": [],
+  "blocks": [
+    {
+      "type": "variant_picker",
+      "name": "t:sections.main-product.blocks.variant_picker.name",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "select",
+          "id": "picker_type",
+          "options": [
+            {
+              "value": "dropdown",
+              "label": "t:sections.main-product.blocks.variant_picker.settings.picker_type.options__1.label"
+            },
+            {
+              "value": "button",
+              "label": "t:sections.main-product.blocks.variant_picker.settings.picker_type.options__2.label"
+            }
+          ],
+          "default": "button",
+          "label": "t:sections.main-product.blocks.variant_picker.settings.picker_type.label"
+        },
+        {
+          "id": "swatch_shape",
+          "label": "t:sections.main-product.blocks.variant_picker.settings.swatch_shape.label",
+          "type": "select",
+          "info": "t:sections.main-product.blocks.variant_picker.settings.swatch_shape.info",
+          "options": [
+            {
+              "value": "circle",
+              "label": "t:sections.main-product.blocks.variant_picker.settings.swatch_shape.options__1.label"
+            },
+            {
+              "value": "square",
+              "label": "t:sections.main-product.blocks.variant_picker.settings.swatch_shape.options__2.label"
+            },
+            {
+              "value": "none",
+              "label": "t:sections.main-product.blocks.variant_picker.settings.swatch_shape.options__3.label"
+            }
+          ],
+          "default": "circle"
+        }
+      ]
+    }
+  ],
   "presets": [
     {
       "name": "Product Info Fold"
